--- a/style.css
+++ b/style.css
@@ -1,221 +1,248 @@
 body {
     margin: 0;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
-    /* border: 2px solid blueviolet */
 }
 
-main {
-    /* border: 2px solid blue; */
-}
+/* -------- Typography -------- */
 
 h1,
 h2 {
     font-family: 'Poppins', sans-serif;
 }
 
-p{
-    color: hsl(208, 11%, 55%);
+/* -------- Buttons -------- */
 
+a {
+    display: inline-block;
+    background-color: hsl(322, 100%, 66%);
+    padding: 0.75em 4em;
+    border-radius: 10rem;
+    color: white;
+    text-decoration: none;
 }
 
+.btn-try-free {
+    padding: 0.5em 3.5em;
+    background-color: white;
+    color: black;
+    box-shadow: 1px 1px 5px 1px rgb(175, 167, 167);
+}
+
+a:hover,
+a:focus {
+    background-color: hsl(322, 59%, 72%);
+}
+
+.btn-try-free:focus,
+.btn-try-free:hover {
+    background-color: white;
+    color: grey;
+}
+
+.btn-started-free {
+    align-self: center;
+}
+
+/* -------- Logo -------- */
+
+.first-logo,
+.last-logo {
+    width: 13rem
+}
+
+.last-logo {
+    filter: invert(92%) sepia(99%) saturate(1%) hue-rotate(330deg) brightness(107%) contrast(100%);
+}
+
+/* -------- Images -------- */
+
+.mockup-img {
+    width: 45%;
+    /* border: 2px solid darkgreen */
+}
+
+.card-img {
+    width: 40%;
+    /* border: 2px solid saddlebrown; */
+    margin: 2.5em 0;
+}
+
+/* -------- Layout -------- */
 header {
     display: flex;
     flex-direction: column;
     background-image: url(/images/bg-hero-desktop.svg);
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
     background-color: hsl(193, 100%, 96%);
-    /* border: 2px solid purple; */
-    padding: 2em;
 }
 
-.logo-div {
-    /* border: 2px solid green; */
+.top {
+    /* border: 2px solid magenta; */
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
+    padding: 2.5em 7em;
 }
 
-.introduction {
+.about {
+    /* border: 2px solid blue; */
     display: flex;
     justify-content: space-around;
-    /* padding: 2.5em; */
-    /* border: 2px solid red; */
-    margin-top: 2em;
 }
 
-.intro-text {
+.about-text {
     /* border: 2px solid red; */
     width: 30%;
     align-self: center;
-}
-
-.mockup {
-    width: 50%;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .card {
     display: flex;
     justify-content: space-around;
-    box-shadow: 2px 2px 10px 1px hsl(193, 15%, 88%);
-    width: 70%;
-    margin: 1em;
-    border-radius: 10px;
-    padding: 3.5em;
-}
-
-.card-flowing-conversation {
-    flex-direction: row-reverse;
+    margin: 2em 6em;
+    box-shadow: 1px 1px 5px 1px rgb(175, 167, 167);
+    border-radius: 1em;
 }
 
 .card-text {
-    width: 40%;
-    /* border: 2px solid blue; */
-    margin: 2em;
-}
-
-.card-img {
     width: 30%;
-    /* border: 2px solid red; */
+    align-self: center;
+    /* border: 2px solid palevioletred; */
 }
 
-.card-ready {
+.card-flow {
+    flex-direction: row-reverse;
+}
+
+.card-small {
     flex-direction: column;
     align-items: center;
     width: 40%;
-    min-height: 200px;
+    align-self: center;
+    padding: 3em 0em;
+    margin-bottom: -5em;
     background-color: white;
-    margin-bottom: -4em;
-    box-shadow: 2px 2px 10px 1px gray;
-    border-radius: 20px;
-}
-
-.btn {
-    border: none;
-    border-radius: 2.5em;
-    padding: 1em 4.25em;
-    display: inline-block;
-    text-decoration: none;
-}
-
-.btn-try-free {
-    padding: 1em 4em;
-    background-color: white;
-    box-shadow: 2px 2px 10px 1px hsl(193, 15%, 88%);
-}
-
-.btn-started-free {
-    background-color: hsl(322, 100%, 66%);
-    color: white;
-    font-weight: 700;
-    margin-top: 2em;
-}
-
-.btn-started-free:hover,
-.btn-started-free:focus {
-    cursor: pointer;
-    background-color: hsla(322, 74%, 67%, 0.767);
-}
-
-.btn-try-free:hover,
-.btn-try-free:focus {
-    color: hsl(195, 4%, 62%);
-    box-shadow: 5px 5px 10px 1px hsl(193, 15%, 88%);
+    text-align: center;
 }
 
 footer {
-    display: flex;
-    /* width: 100%; */
-    flex-direction: column;
-    /* border: 5px solid brown; */
-    /* margin: 1em; */
-    padding-top: 8em;
-    padding-bottom: 5em;
-    padding-left: 4em;
-    padding-right: 4em;
     background-color: hsl(192, 100%, 9%);
     color: white;
+    display: flex;
+    flex-direction: column;
+    padding-top: 5em;
 }
-
-.last-section-container {
-    width: 80%;
-    align-self: center;
-    border: 3px solid black;
-}
-
-.first-logo {
-    /* border: 2px solid yellow; */
-    margin-left: 5em;
-}
-
 
 .info {
     display: flex;
-    /* border: 2px solid yellow; */
-}
-
-li {
-    list-style-type: none;
-    margin: 1.5em 0;
-}
-
-.last-logo-container {
-    /* background-color: white; */
-    display: flex;
-    margin-left: 2em;
-}
-
-.last-logo {
-    width: 15%;
     /* border: 2px solid red; */
-    /* background-color: white; */
-    mix-blend-mode: multiply;
-    color: white;
+    justify-content: space-between;
+    padding: 0 1.5em;
+}
+
+.fb-twitter-insta {
+    display: flex;
 }
 
 ul {
-     width: 30%;
-     /* border: 2px solid blue; */
-     margin: 0.25em;
+    list-style: none;
+    /* border: 2px solid pink; */
+    width: 25%;
 }
 
-footer {
-    /* text-align: right; */
+li {
+    margin: 1.5em 0em;
+    margin-top: 0;
 }
 
-.ul-1,
-.ul-2,
-.ul-3 {
-    /* border: 2px solid black; */
-    padding-left: 3em;
+.fb-twitter-insta li {
+    margin-left: 1em;
+    text-align: center;
+    padding: 0.15em;
+    width: 20px;
+    height: 25px;
+    border: 1px solid white;
+    border-radius: 50%;
 }
 
 .copyright {
-    /* text-align: right; */
     align-self: flex-end;
+    /* border: 2px solid green; */
 }
 
-.fa {
-    /* border: 1px solid white;
-    border-radius: 50%; */
-    /* width: 20px;
-    display: inline; */
-    margin: 1em;
+.last-logo {
+    /* border: 2px solid red; */
+    margin-left: 4em;
+    margin-top: 4em;
+    margin-bottom: 0;
 }
 
-.twitter-fb-logo {
-    display: flex;
-    /* border: 2px solid black; */
-    /* width: 5%; */
-    justify-content: flex-start;
+@media (max-width:1070px) {
+    body {
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .card {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .card-small {
+        flex-direction: column;
+        width: 70%;
+    }
+
+    .card-text,
+    .card-img {
+        width: 60%;
+    }
+
+    .about {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-text,
+    .mockup-img {
+        width: 60%;
+    }
+
+    .btn-try-free {
+        padding: 0.25em 1.5em;
+    }
+
+    .btn-started-free {
+        padding: 0.75em 3em;
+    }
+
+    .card-small h1 {
+        font-size: 24px;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: center;
+        text-align: left;
+    }
+
+    ul {
+        width: 70%;
+    }
+
+    .copyright {
+        align-self: center;
+    }
+
 }
