--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(193, 100%, 96%);
+    padding-bottom: 2em;
 }
 
 .top {
@@ -141,7 +142,7 @@ footer {
     color: white;
     display: flex;
     flex-direction: column;
-    padding-top: 5em;
+    padding: 5em;
 }
 
 .info {
@@ -188,6 +189,7 @@ li {
     margin-bottom: 0;
 }
 
+
 @media (max-width:1070px) {
     body {
         text-align: center;
@@ -201,6 +203,7 @@ li {
     .card {
         flex-direction: column-reverse;
         align-items: center;
+        margin: 2em;
     }
 
     .card-small {
@@ -211,6 +214,7 @@ li {
     .card-text,
     .card-img {
         width: 60%;
+        padding-bottom: 1.5em;
     }
 
     .about {
@@ -220,7 +224,11 @@ li {
 
     .about-text,
     .mockup-img {
-        width: 60%;
+        width: 80%;
+    }
+
+    .mockup-img {
+        padding-top: 2em;
     }
 
     .btn-try-free {
@@ -247,6 +255,10 @@ li {
 
     .copyright {
         align-self: center;
+    }
+
+    footer {
+        padding: 5em 0;
     }
 
 }
